deploy/yamls/simple-pcf-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: simple-pcf-application
  name: simple-pcf-application
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: simple-pcf-application
  type: ClusterIP
status:
  loadBalancer: {}
